# zero2prod

./: 1_SETUP.md  2_EMAIL_NEWSLETTER.md  3_INTEGRATION_TEST.md  Cargo.toml
migrations/: 20240506200128_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
